Add Golden Grid System (GGS) for styling
  * Modify GGS to fit desired look/feel
  * Define default layout for site
  * Define index/post layouts

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,10 +1,9 @@
-<h1>alimi</h1>
-
-Assuming I have posts...
-
-<ul>
+---
+layout: default
+---
+<ul class='main-content'>
   {% for post in site.posts %}
-    <li>
+    <li class="wrapper">
       <a href="{{ post.url }}">{{ post.title }}</a>
     </li>
  {% endfor %}
