--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,12 @@
-<h1>alimi</h1>
+---
+layout: default
+---
 
-<h2> {{ page.title }} </h2>
-
-<div>
-  {{ content }}
-</div>
+<article class='main-content'>
+  <header class="wrapper">
+    <h2>{{ page.title }}</h2>
+  </header>
+  <section class="wrapper">
+    {{ content }}
+  </section>
+</article>
