--- a/assets/stylesheets/GGS.css
+++ b/assets/stylesheets/GGS.css
@@ -89,12 +89,16 @@ h3 {
   box-sizing: border-box;
 }
 
-/*
-*  alimi
-*  Don't need to set margin article headers 
-*/
 article header {
-  margin: 0;
+  margin: 0 0 1em;
+}
+
+article header h2 {
+  margin-bottom: 0;
+}
+
+section p {
+  margin-bottom: 1.5em;
 }
 
 /* @media screen and (min-width: 640px) */
