--- a/_layouts/application.html
+++ b/_layouts/application.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href="/assets/stylesheets/normalize.css" type="text/css" rel="stylesheet"/>
+    <link href="/assets/stylesheets/reset.css" type="text/css" rel="stylesheet"/>
     <link href="/assets/stylesheets/application.css" type="text/css" rel="stylesheet"/>
     <script type="text/javascript" src="/assets/javascripts/GGS.js"></script>
   </head>
