--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -1,3 +1,12 @@
+body {
+  font-size: 1em;
+  line-height: 1.5em; }
+
+h1 {
+  font-size: 2em;
+  line-height: 1.125em;
+  margin: 0.75em 0 1.125em; }
+
 /*
 *
 *  Simple elastic gutters
@@ -23,11 +32,10 @@ header, .main-content {
   margin: 0 5.55556%; }
 
 article header {
-  margin: 0 0 1.5em; }
-  article header h2 {
-    margin-bottom: 0; }
-  article header p {
-    margin: 0; }
+  margin: 0; }
+
+p {
+  margin-bottom: 1.5em; }
 
 /*
 *
