Update header styling
  * Add image and subheading
  * Adjust spacing
  * Also, change site background color

--- a/_layouts/application.html
+++ b/_layouts/application.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <header class="wrapper">
-      <h1>alimi</h1>
+      <img src="/assets/images/ali_small.jpg">
+      <h1>ali ibrahim</h1>
+      <p><i>ah-lee ih-brah-him or ah-lee-e-brah-heem</i></p>
     </header>
     {{ content }}
   </body>
