--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #fbfaf5;
   font-size: 1em;
   line-height: 1.5em; }
 
@@ -29,10 +30,22 @@ h1 {
 *
 */
 header, .main-content {
-  margin: 0 5.55556%; }
+  margin: 0 5.55556%;
+  clear: both; }
+
+header img {
+  float: left;
+  margin-bottom: 3em; }
+header h1 {
+  padding-left: 2.625em;
+  margin-bottom: 0.375em; }
+header p {
+  padding-left: 5.25em; }
 
 article header {
   margin: 0; }
+article p {
+  padding: 0; }
 
 p {
   margin-bottom: 1.5em; }
