--- a/assets/stylesheets/scss/application.scss
+++ b/assets/stylesheets/scss/application.scss
@@ -1,15 +1,18 @@
 $column-width-percentage: 100% / 18;
 $base-font-size: 16px;
 $base-line-height: 24px;
+$gutter-width: 24px;
+
+$h1-font-size: 2 * $base-font-size;
+$h1-line-height: $base-line-height * 1.5;
 
 body {
+  background-color: #fbfaf5;
   font-size: #{$base-font-size / $base-font-size}em;
   line-height: #{$base-line-height / $base-font-size}em;
 }
 
 h1 {
-  $h1-font-size: 2 * $base-font-size;
-  $h1-line-height: $base-line-height * 1.5;
   font-size: #{$h1-font-size / $base-font-size}em;
   line-height: #{$h1-line-height / $h1-font-size}em;
   margin: #{$base-line-height / $h1-font-size}em 0 #{$h1-line-height / $h1-font-size}em;
@@ -22,7 +25,7 @@ h1 {
 *
 */
 .wrapper {
-  padding: 0 0.75em;
+  padding: 0 #{($gutter-width / $base-font-size) / 2}em;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
@@ -39,10 +42,33 @@ h1 {
 */
 header, .main-content {
   margin: 0 $column-width-percentage;
+  clear: both;
 }
 
-article header {
-  margin: 0;
+header {
+  img {
+    float: left;
+    margin-bottom: #{2 * ($base-line-height / $base-font-size)}em;
+  }
+
+  h1 {
+    padding-left: #{(72px / $h1-font-size) + 0.5 * ($gutter-width / $h1-font-size)}em;
+    margin-bottom: #{($h1-line-height - $base-line-height) / $h1-font-size}em;
+  }
+
+  p {
+    padding-left: #{(72px / $base-font-size) + 0.5 * ($gutter-width / $base-font-size)}em;
+  }
+}
+
+article {
+  header {
+    margin: 0;
+  }
+
+  p {
+    padding: 0;
+  }
 }
 
 p {
