Update header styling
  * Separate header image from header text
  * Include links in header text
  * Wrap header text in a section and do all spacing on section element
  * Update link styling

--- a/_layouts/application.html
+++ b/_layouts/application.html
@@ -9,8 +9,16 @@
   <body>
     <header class="wrapper">
       <img src="/assets/images/ali_small.jpg">
-      <h1>ali ibrahim</h1>
-      <p><i>ah-lee ih-brah-him or ah-lee-e-brah-heem</i></p>
+      <section>
+        <h1>ali ibrahim</h1>
+        <p><i>ah-lee ih-brah-him or ah-lee-e-brah-heem</i></p>
+        <a href='https://twitter.com/alimeye' class="twitter" target="_blank">
+          alimeye
+        </a>
+        <a href='https://github.com/alimi' class="github" target="_blank">
+          alimi
+        </a>
+      </section>
     </header>
     {{ content }}
   </body>
