--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -6,7 +6,16 @@ body {
 h1 {
   font-size: 2em;
   line-height: 1.125em;
-  margin: 0.75em 0 1.125em; }
+  margin-top: 0.75em;
+  margin-bottom: 1.125em; }
+
+a {
+  color: #62236b;
+  text-decoration: none; }
+  a.twitter:before {
+    content: url(/assets/images/twitter-bird-16x16.png) " "; }
+  a.github:before {
+    content: url(/assets/images/GitHub-Mark-16px.png) " "; }
 
 /*
 *
@@ -34,13 +43,17 @@ header, .main-content {
   clear: both; }
 
 header img {
-  float: left;
-  margin-bottom: 3em; }
-header h1 {
-  padding-left: 2.625em;
-  margin-bottom: 0.375em; }
-header p {
+  float: left; }
+header section {
+  margin-top: 3em;
+  margin-bottom: 2.25em;
   padding-left: 5.25em; }
+  header section h1 {
+    margin: 0; }
+  header section p {
+    margin: 0; }
+  header section img {
+    margin: 0; }
 
 article header {
   margin: 0; }
