--- a/assets/stylesheets/scss/application.scss
+++ b/assets/stylesheets/scss/application.scss
@@ -15,7 +15,21 @@ body {
 h1 {
   font-size: #{$h1-font-size / $base-font-size}em;
   line-height: #{$h1-line-height / $h1-font-size}em;
-  margin: #{$base-line-height / $h1-font-size}em 0 #{$h1-line-height / $h1-font-size}em;
+  margin-top: #{$base-line-height / $h1-font-size}em;
+  margin-bottom: #{$h1-line-height / $h1-font-size}em;
+}
+
+a {
+  color: #62236b;
+  text-decoration: none;
+
+  &.twitter:before {
+    content: url(/assets/images/twitter-bird-16x16.png) " ";
+  }
+
+  &.github:before {
+    content: url(/assets/images/GitHub-Mark-16px.png) " ";
+  }
 }
 
 /*
@@ -48,16 +62,19 @@ header, .main-content {
 header {
   img {
     float: left;
-    margin-bottom: #{2 * ($base-line-height / $base-font-size)}em;
   }
 
-  h1 {
-    padding-left: #{(72px / $h1-font-size) + 0.5 * ($gutter-width / $h1-font-size)}em;
-    margin-bottom: #{($h1-line-height - $base-line-height) / $h1-font-size}em;
-  }
+  section {
+    h1 { margin: 0; }
+    p { margin: 0; }
+    img { margin: 0; }
 
-  p {
-    padding-left: #{(72px / $base-font-size) + 0.5 * ($gutter-width / $base-font-size)}em;
+    $header-img-height: 72px;
+
+    margin-top: #{(2 * $base-line-height)/ $base-font-size}em;
+    margin-bottom: #{$header-img-height / $h1-font-size}em;
+    padding-left: #{($header-img-height / $base-font-size) +
+      0.5 * ($gutter-width / $base-font-size)}em;
   }
 }
 
