--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,8 +3,19 @@ layout: application
 ---
 <ul class='main-content'>
   {% for post in site.posts %}
-    <li class="wrapper">
-      <a href="{{ post.url }}">{{ post.title }}</a>
+    <li>
+      <header class="wrapper">
+        <h2>
+          <a href="{{ post.url }}">{{ post.title }}</a>
+        </h2>
+        <p>on {{ post.date | date: "%A, %B %d, %Y" }}</p>
+      </header>
+      <section class="wrapper">
+        {{ post.excerpt }}
+        <p>
+          <a href="{{ post.url }}">Continue reading...</a>
+        </p>
+      </section>
     </li>
- {% endfor %}
+  {% endfor %}
 </ul>
