--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -10,12 +10,15 @@ h1 {
   margin-bottom: 1.125em; }
 
 a {
-  color: #62236b;
+  color: #51007a;
   text-decoration: none; }
   a.twitter:before {
     content: url(/assets/images/twitter-bird-16x16.png) " "; }
   a.github:before {
     content: url(/assets/images/GitHub-Mark-16px.png) " "; }
+
+ul {
+  list-style: none; }
 
 /*
 *
@@ -59,6 +62,9 @@ article header {
   margin: 0; }
 article p {
   padding: 0; }
+
+ul header {
+  margin: 0; }
 
 p {
   margin-bottom: 1.5em; }
