--- a/_layouts/application.html
+++ b/_layouts/application.html
@@ -4,7 +4,9 @@
     <link href="/assets/stylesheets/normalize.css" type="text/css" rel="stylesheet"/>
     <link href="/assets/stylesheets/reset.css" type="text/css" rel="stylesheet"/>
     <link href="/assets/stylesheets/application.css" type="text/css" rel="stylesheet"/>
-    <script type="text/javascript" src="/assets/javascripts/GGS.js"></script>
+    {% if site.env == 'DEV' %}
+      <script type="text/javascript" src="/assets/javascripts/GGS.js"></script>
+    {% endif %}
   </head>
   <body>
     <header class="wrapper">
