Add code syntax highlighting
  * Use syntax.css from
    https://github.com/mojombo/tpw/blob/master/css/syntax.css with changes to
    remove background color
  * Also, remove unused GGS.css and create new GGS.scss to support GGS.js

--- a/_layouts/application.html
+++ b/_layouts/application.html
@@ -3,7 +3,9 @@
   <head>
     <link href="/assets/stylesheets/normalize.css" type="text/css" rel="stylesheet"/>
     <link href="/assets/stylesheets/reset.css" type="text/css" rel="stylesheet"/>
+    <link href="/assets/stylesheets/GGS.css" type="text/css" rel="stylesheet"/>
     <link href="/assets/stylesheets/application.css" type="text/css" rel="stylesheet"/>
+    <link href="/assets/stylesheets/syntax.css" type="text/css" rel="stylesheet"/>
     {% if site.env == 'DEV' %}
       <script type="text/javascript" src="/assets/javascripts/GGS.js"></script>
     {% endif %}
