--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -20,7 +20,7 @@ a {
 ul {
   list-style: none; }
 
-footer {
+p, div, footer {
   margin-bottom: 1.5em; }
 
 /*
@@ -68,9 +68,6 @@ article p {
 
 ul header {
   margin: 0; }
-
-p {
-  margin-bottom: 1.5em; }
 
 /*
 *
