Update application styling
  * Add footer
  * Update title
  * Move header contents into two divs, left and right, add set spacing through
    those divs
  * Adjust spacing for code snippets (highlights)
  * Move comments into separate partial

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,5 +1,5 @@
 {% if site.env == 'DEV' %}
-  Comments available in Production
+  <p>Comments available in Production</p>
 {% elsif site.env == 'PROD' %}
   <div id="disqus_thread"></div>
   <script type="text/javascript">
