--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -20,7 +20,7 @@ a {
 ul {
   list-style: none; }
 
-p, div, footer {
+p, footer {
   margin-bottom: 1.5em; }
 
 /*
@@ -44,24 +44,24 @@ p, div, footer {
 *  5.55555% | %  25  50  75  100 | 5.55555%
 *
 */
-header, .main-content {
+header, .main-content, footer {
   margin: 0 5.55556%;
   clear: both; }
 
-header img {
+.wrapper, .left, .right {
   float: left; }
-header section {
-  margin-top: 3em;
-  margin-bottom: 2.25em;
-  padding-left: 5.25em; }
-  header section h1 {
+
+header div.left {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em; }
+  header div.left * {
     margin: 0; }
-  header section p {
-    margin: 0; }
-  header section img {
+header div.right {
+  margin-bottom: 1.5em; }
+  header div.right * {
     margin: 0; }
 
-article header {
+article header, article footer {
   margin: 0; }
 article p {
   padding: 0; }
@@ -69,6 +69,13 @@ article p {
 ul header {
   margin: 0; }
 
+div.highlight {
+  margin-bottom: 1.5em; }
+
+@media screen and (min-width: 28.5em) {
+  header div.left, header div.right {
+    margin-top: 3em;
+    margin-bottom: 1.5em; } }
 /*
 *
 *  Eight-column grid active
@@ -79,5 +86,5 @@ ul header {
 *
 */
 @media screen and (min-width: 61.5em) {
-  header, .main-content {
+  header, .main-content, footer {
     margin: 0 16.66667%; } }
