--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,18 +4,18 @@ layout: application
 <ul class='main-content'>
   {% for post in site.posts %}
     <li>
-      <header class="wrapper">
+      <div class="wrapper">
         <h2>
           <a href="{{ post.url }}">{{ post.title }}</a>
         </h2>
         <p>on {{ post.date | date: "%A, %B %d, %Y" }}</p>
-      </header>
-      <section class="wrapper">
+      </div>
+      <div class="wrapper">
         {{ post.excerpt }}
         <p>
           <a href="{{ post.url }}">Continue reading...</a>
         </p>
-      </section>
+      </div>
     </li>
   {% endfor %}
 </ul>
