Update draft web design post
  * Rename and edit post
  * Add images

Add support for images in stylesheet

  * Images cannot be larger the screen's width

Change permalink settings

  * Permalinks do not include categories.  Makes it easier to change categories
    in the future without breaking links.

--- a/assets/stylesheets/scss/application.scss
+++ b/assets/stylesheets/scss/application.scss
@@ -103,6 +103,12 @@ div.highlight {
   margin-bottom: #{$base-line-height / $base-font-size}em;
 }
 
+p {
+  img {
+    max-width: 100%;
+  }
+}
+
 @media screen and (min-width: #{456px / $base-font-size}em) {
   header {
     div.left, div.right {
