Declare charset in site layout and restore special character in post

--- a/_layouts/application.html
+++ b/_layouts/application.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='initial-scale=1.0, user-scalable=no'>
     {% if page.title == 'alimi' %}
       <title>ali ibrahim blogs</title>
     {% else %}
@@ -14,7 +16,6 @@
     {% if site.env == 'DEV' %}
       <script type="text/javascript" src="/assets/javascripts/GGS.js"></script>
     {% endif %}
-    <meta name='viewport' content='initial-scale=1.0, user-scalable=no'>
   </head>
   <body>
     <header>
